# graphql-rust

./: Cargo.toml
src/: main.rs
src/schemas/: schema.rs
