[package]
edition = "2021"
name = "rust-graphql-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-lab = "0.20.0"
diesel = {version = "1.0.0", features = ["postgres"]}
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.1"
juniper = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
